<resources>
    <string name="app_name">GymApp</string>
    <string name="save">Save</string>
    <string name="password">Password</string>
    <string name="text_email">Email</string>
    <string name="password_cmp">Confirm Password</string>
    <string name="hint_name">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_weight">Weight</string>
    <string name="hint_height">Height</string>
    <string name="hint_age">Age</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="register">Sign Up</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member?</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Match</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
    <string name="message_before_delete">Are you sure that you want to delete this account?</string>

    // updateView strings
    <string name="updateUsername">Username</string>
    <string name="updateHeight">Height</string>
    <string name="updateWeight">Weight</string>
    <string name="updateAge">Age</string>
    <string name="deleteButtonText">Delete</string>
    <string name="cancelAction">Cancel</string>
    <string name="alert_message_on_delete">Attention! You\' re about to delete the account you\' re logged in!</string>
    <string name="update_from_profile">Update Account Information</string>
    <string name="view_all_users_button">View All Users Info</string>
    <string name="delete_account_button">Delete Account</string>
    <string name="logout_button">Logout</string>
    <string name="workouts">Workouts</string>
    <string name="exercises">Exercises</string>
    <string name="workoutName">Name</string>
    <string name="workoutInfo">Additional information</string>
    <string name="addWorkout">Add Workout</string>
    <string name="addWorkoutTitle">Add a new Workout</string>
    <string name="loginTitle">Sign In</string>
    <string name="registerTitle">Create your account</string>
    <string name="workoutNameRecycler">Workout name</string>
    <string name="workoutInfoRecyclerLabel">Info:</string>
    <string name="workoutInfoRecycler">Additional information</string>
    <string name="workoutExercisesRecycler">AoEx</string>
    <string name="login_link">Sign in</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="register_link">Sign Up</string>
    <string name="usernameLabel">Username</string>
    <string name="updateAccountTitle">Update your account</string>
    <string name="sign_in_button">SIGN IN</string>

    <string-array name="account_choices">
        <item></item>
        <item>Update</item>
        <item>Delete</item>
    </string-array>
</resources>
