<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="30dp"
    android:layout_marginRight="20dp">

    <TextView
        android:id="@+id/deleteUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:textColor="@color/colorSecondary"
        android:layout_gravity="center"
        android:padding="10dp"/>
    
    <TextView
        android:id="@+id/deleteTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="@color/colorAccent"
        android:text="@string/message_before_delete"
        android:layout_marginBottom="10dp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/alertDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textSize="15sp"
        android:textColor="@android:color/holo_red_light"
        android:text="@string/alert_message_on_delete"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:padding="10dp"
        android:visibility="visible"/>
    <Button
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/button_delete"
        android:textSize="20sp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/deleteButtonText"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/btnCancelDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/button_secondary"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/cancelAction" />
</LinearLayout>