<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="4dp">

    <Spinner
        android:id="@+id/spinnerAccount"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="end"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/ic_settings" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewUsername"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/workoutNameRecycler"
                android:textColor="@color/colorAccent"
                android:textSize="26sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".04"
                android:text="@string/workoutInfoRecyclerLabel"
                android:textColor="@color/colorSecondary"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".2"
                android:text="@string/workoutInfoRecycler"
                android:textColor="@android:color/lighter_gray"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:gravity="end"
            android:textAlignment="gravity">

            <ImageView
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:layout_gravity="end"
                android:background="@drawable/ic_dumbbell" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10sp"
                android:text="@string/workoutExercisesRecycler"
                android:textColor="@color/colorSecondary"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>