<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">
    <!--tools:context="activities.LoginActivity"-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/addWorkoutTitle"
            android:textColor="@color/colorAccent"
            android:textSize="26sp"
            android:textStyle = "bold"
            android:textAlignment="center"
            android:layout_margin="10sp"/>

        <TextView
            android:id="@+id/workoutName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/editWorkoutName"
            android:text="@string/workoutName"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutWorkoutName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editWorkoutName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/workoutInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:labelFor="@id/editWorkoutInfo"
            android:text="@string/workoutInfo"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutWorkoutInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editWorkoutInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnAddWorkout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_submit"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/addWorkout"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>